--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "fs-extra": "^11.1.1",
     "mongoose": "^7.2.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
